--- a/main.html
+++ b/main.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  <meta charset="UTF-8">
+  <title>Nav Bar</title>
+  <style>
+    nav {
+      background-color: #D3D3D3;
+      padding: 10px;
+    }
 
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    li {
+      display: inline;
+      margin-right: 1rem;
+    }
+  </style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <nav>
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Contact Us</li>
+      <li>Itinerary</li>
+    </ul>
+  </nav>
 
 </body>
+</html>
+
 
 </html>
