--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Nav Bar</title>
   <style>
-    nav {
+    .container {
       background-color: #D3D3D3;
       padding: 10px;
     }
@@ -13,17 +13,17 @@
       list-style: none;
       margin: 0;
       padding: 0;
+      display: flex;
     }
 
     li {
-      display: inline;
       margin-right: 1rem;
     }
   </style>
 </head>
 <body>
 
-  <nav>
+  <nav class="container">
     <ul>
       <li>Home</li>
       <li>About</li>
@@ -35,5 +35,3 @@
 </body>
 </html>
 
-
-</html>
